--- a/html/cabinet-create-event.html
+++ b/html/cabinet-create-event.html
@@ -70,95 +70,97 @@
         </nav>
       </div>
     </header>
-    <div class="hamburger color"></div>
+    <div class="hamburger color element-btn" data-showEl="0"></div>
     <!-- header-->
-    <div class="stub"></div>
-    <div class="cabinet-all main-grid">
-      <div class="cabinet-body">
-        <h2>Создание мероприятия</h2>
-        <div class="registration-hint">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut pretium pretium tempor. Ut eget imperdiet neque. In volutpat ante semper diam molestie, et aliquam erat laoreet. Sed sit amet arcu aliquet, molestie justo at, auctor nunc. Phasellus ligula ipsum, volutpat eget semper id, viverra eget nibh. Suspendisse luctus mattis cursus. Nam consectetur ante at nisl hendrerit gravida. Donec vehicula rhoncus mattis. Mauris dignissim semper mattis. Fusce porttitor a mi at suscipit. Praesent facilisis dolor sapien, vel sodales augue mollis ut. Mauris venenatis magna eu tortor posuere luctus. Aenean tincidunt turpis sed dui aliquam vehicula. Praesent nec elit non dolor consectetur tincidunt sed in felis. Donec elementum, lacus at mattis tincidunt, eros magna faucibus sem, in condimentum est augue tristique risus.</div>
-        <div class="registration-body">
-          <div class="reg-line">
-            <label>
-               Название новости:</label>
-            <input type="text">
-          </div>
-          <div class="reg-line">
-            <label>Выберите категорию</label>
-            <select class="style-select">
-              <option>1</option>
-              <option>2</option>
-              <option>3</option>
-            </select>
-          </div>
-          <div class="reg-line">
-            <label>Выберите город</label>
-            <select class="style-select">
-              <option>1</option>
-              <option>2</option>
-              <option>3</option>
-            </select>
-          </div>
-          <div class="reg-line">
-            <label>
-               Адрес:</label>
-            <input type="text">
-          </div>
-          <div class="reg-line">
-            <label>
-               Этаж:</label>
-            <input type="text">
-          </div>
-          <div class="reg-line">
-            <label>
-               Кабинет, зал:</label>
-            <input type="text">
-          </div>
-          <div class="reg-line">
-            <label>
-               Телефон:</label>
-            <input type="text">
-          </div>
-          <div class="reg-line">
-            <label>Время и дата:</label>
-            <select class="style-select">
-              <option>1</option>
-              <option>2</option>
-              <option>3</option>
-            </select>
-          </div>
-          <div class="reg-line">
-            <label>
-               Описание:</label>
-            <textarea></textarea>
-            <div class="input-hint">При создании описания выделяйте среди текста заголовки для более понятного и структурированного отображения информации для пользователей сервисом.</div>
-          </div>
-          <div class="reg-line">
-            <label>Добавить фото:</label>
-            <div class="btn-wc"><a class="btn small btn-file" href="#"><i></i><span>Добвить</span></a></div>
-          </div>
-          <div class="reg-line">
-            <div class="added-files-container">
-              <div class="af-item"><img class="af-img" src="../images/1.jpg">
-                <div class="af-name">Namefile.jpg</div><i></i>
+    <div class="wrapper">
+      <div class="stub"></div>
+      <div class="cabinet-all main-grid">
+        <div class="cabinet-body">
+          <h2>Создание мероприятия</h2>
+          <div class="registration-hint">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut pretium pretium tempor. Ut eget imperdiet neque. In volutpat ante semper diam molestie, et aliquam erat laoreet. Sed sit amet arcu aliquet, molestie justo at, auctor nunc. Phasellus ligula ipsum, volutpat eget semper id, viverra eget nibh. Suspendisse luctus mattis cursus. Nam consectetur ante at nisl hendrerit gravida. Donec vehicula rhoncus mattis. Mauris dignissim semper mattis. Fusce porttitor a mi at suscipit. Praesent facilisis dolor sapien, vel sodales augue mollis ut. Mauris venenatis magna eu tortor posuere luctus. Aenean tincidunt turpis sed dui aliquam vehicula. Praesent nec elit non dolor consectetur tincidunt sed in felis. Donec elementum, lacus at mattis tincidunt, eros magna faucibus sem, in condimentum est augue tristique risus.</div>
+          <div class="registration-body">
+            <div class="reg-line">
+              <label>
+                 Название новости:</label>
+              <input type="text">
+            </div>
+            <div class="reg-line">
+              <label>Выберите категорию</label>
+              <select class="style-select">
+                <option>1</option>
+                <option>2</option>
+                <option>3</option>
+              </select>
+            </div>
+            <div class="reg-line">
+              <label>Выберите город</label>
+              <select class="style-select">
+                <option>1</option>
+                <option>2</option>
+                <option>3</option>
+              </select>
+            </div>
+            <div class="reg-line">
+              <label>
+                 Адрес:</label>
+              <input type="text">
+            </div>
+            <div class="reg-line">
+              <label>
+                 Этаж:</label>
+              <input type="text">
+            </div>
+            <div class="reg-line">
+              <label>
+                 Кабинет, зал:</label>
+              <input type="text">
+            </div>
+            <div class="reg-line">
+              <label>
+                 Телефон:</label>
+              <input type="text">
+            </div>
+            <div class="reg-line">
+              <label>Время и дата:</label>
+              <select class="style-select">
+                <option>1</option>
+                <option>2</option>
+                <option>3</option>
+              </select>
+            </div>
+            <div class="reg-line">
+              <label>
+                 Описание:</label>
+              <textarea></textarea>
+              <div class="input-hint">При создании описания выделяйте среди текста заголовки для более понятного и структурированного отображения информации для пользователей сервисом.</div>
+            </div>
+            <div class="reg-line">
+              <label>Добавить фото:</label>
+              <div class="btn-wc"><a class="btn small btn-file" href="#"><i></i><span>Добвить</span></a></div>
+            </div>
+            <div class="reg-line">
+              <div class="added-files-container">
+                <div class="af-item"><img class="af-img" src="../images/1.jpg">
+                  <div class="af-name">Namefile.jpg</div><i></i>
+                </div>
               </div>
             </div>
+            <div class="event-choise-map"></div>
           </div>
-          <div class="event-choise-map"></div>
         </div>
-      </div>
-      <div class="cabinet-side">
-        <div class="cabinet-info">
-          <h3>Ваш тарифный план</h3>
-          <div class="ci-line"><span>Тариф:</span><span>Тариф</span></div>
-          <div class="ci-line"><span>Оплачено до:</span><span>23.03.2020</span></div>
-          <div class="ci-line"><span>Осталось мероприятий:</span><span>23</span></div>
-          <div class="ci-line"><span>Ограничения по городу:</span><span>Нет ограничений</span></div>
-          <div class="ci-line"><span>Активные мероприятия:</span><span>5</span></div>
+        <div class="cabinet-side">
+          <div class="cabinet-info">
+            <h3>Ваш тарифный план</h3>
+            <div class="ci-line"><span>Тариф:</span><span>Тариф</span></div>
+            <div class="ci-line"><span>Оплачено до:</span><span>23.03.2020</span></div>
+            <div class="ci-line"><span>Осталось мероприятий:</span><span>23</span></div>
+            <div class="ci-line"><span>Ограничения по городу:</span><span>Нет ограничений</span></div>
+            <div class="ci-line"><span>Активные мероприятия:</span><span>5</span></div>
+          </div>
         </div>
-      </div>
-      <div class="btn-wc-bottom">
-        <input class="btn orange btn-registration" type="submit" value="Добавть мероприятие"><a class="btn orange-border btn-registration" href="#">Отменить</a>
+        <div class="btn-wc-bottom">
+          <input class="btn orange btn-registration" type="submit" value="Добавть мероприятие"><a class="btn orange-border btn-registration" href="#">Отменить</a>
+        </div>
       </div>
     </div>
   </body>
