--- a/html/cabinet-event.html
+++ b/html/cabinet-event.html
@@ -70,64 +70,66 @@
         </nav>
       </div>
     </header>
-    <div class="hamburger color"></div>
+    <div class="hamburger color element-btn" data-showEl="0"></div>
     <!-- header-->
-    <div class="stub"></div>
-    <div class="cabinet-all main-grid">
-      <div class="cabinet-body">
-        <div class="cabinet-event"> 
-          <h2>Заголовок размещенного мероприятия в несколько строк</h2>
-          <div class="cabinet-event-container">
-            <div class="ce-head">
-              <div class="ce-gallery">
-                <div class="gallery-main"><img src="../images/1.jpg"></div>
-                <div class="gallery-navigation detail-all-img">
-                  <div class="g-prev up"></div>
-                  <div class="g-next down"></div>
-                  <div class="img-container"><img class="dai-item" src="../images/1.jpg"><img class="dai-item" src="../images/2.jpg"><img class="dai-item" src="../images/3.jpg"><img class="dai-item" src="../images/4.jpg"><img class="dai-item" src="../images/1.jpg"><img class="dai-item" src="../images/2.jpg"><img class="dai-item" src="../images/3.jpg"><img class="dai-item" src="../images/4.jpg"><img class="dai-item" src="../images/1.jpg"><img class="dai-item" src="../images/2.jpg"><img class="dai-item" src="../images/3.jpg"><img class="dai-item" src="../images/4.jpg">
+    <div class="wrapper">
+      <div class="stub"></div>
+      <div class="cabinet-all main-grid">
+        <div class="cabinet-body">
+          <div class="cabinet-event"> 
+            <h2>Заголовок размещенного мероприятия в несколько строк</h2>
+            <div class="cabinet-event-container">
+              <div class="ce-head">
+                <div class="ce-gallery">
+                  <div class="gallery-main"><img src="../images/1.jpg"></div>
+                  <div class="gallery-navigation detail-all-img">
+                    <div class="g-prev up"></div>
+                    <div class="g-next down"></div>
+                    <div class="img-container"><img class="dai-item" src="../images/1.jpg"><img class="dai-item" src="../images/2.jpg"><img class="dai-item" src="../images/3.jpg"><img class="dai-item" src="../images/4.jpg"><img class="dai-item" src="../images/1.jpg"><img class="dai-item" src="../images/2.jpg"><img class="dai-item" src="../images/3.jpg"><img class="dai-item" src="../images/4.jpg"><img class="dai-item" src="../images/1.jpg"><img class="dai-item" src="../images/2.jpg"><img class="dai-item" src="../images/3.jpg"><img class="dai-item" src="../images/4.jpg">
+                    </div>
                   </div>
                 </div>
+                <div class="ce-info">
+                  <div class="ce-line"><span>Категория:</span><span>Категория 3</span></div>
+                  <div class="ce-line"><span>Город:</span><span>Новосибирск</span></div>
+                  <div class="ce-line"><span>Адрес:</span><span>Адрес 21</span></div>
+                  <div class="ce-line"><span>Этаж:</span><span>2</span></div>
+                  <div class="ce-line"><span>Кабинет, зал:</span><span>Зал 2</span></div>
+                  <div class="ce-line"><span>Телефон:</span><span>8 (999) 999 99 99</span></div>
+                  <div class="ce-line"><span>Время и дата:</span><span>12 Июня 20:00</span></div>
+                  <div class="btn-wc"><a class="btn orange" href="#">Редактировать </a></div>
+                </div>
               </div>
-              <div class="ce-info">
-                <div class="ce-line"><span>Категория:</span><span>Категория 3</span></div>
-                <div class="ce-line"><span>Город:</span><span>Новосибирск</span></div>
-                <div class="ce-line"><span>Адрес:</span><span>Адрес 21</span></div>
-                <div class="ce-line"><span>Этаж:</span><span>2</span></div>
-                <div class="ce-line"><span>Кабинет, зал:</span><span>Зал 2</span></div>
-                <div class="ce-line"><span>Телефон:</span><span>8 (999) 999 99 99</span></div>
-                <div class="ce-line"><span>Время и дата:</span><span>12 Июня 20:00</span></div>
-                <div class="btn-wc"><a class="btn orange" href="#">Редактировать </a></div>
+              <div class="ce-body"> 
+                <h3>Заголовок 1</h3>
+                <p>Donec facilisis tortor ut augue lacinia, at viverra est semper. Sed sapien metus, scelerisque nec pharetra id, tempor a tortor. Pellentesque non dignissim neque. Ut porta viverra est, ut dignissim elit elementum ut. Nunc vel rhoncus nibh, ut tincidunt turpis. Integer ac enim pellentesque, adipiscing metus id, pharetra odio. Donec bibendum nunc sit amet tortor scelerisque luctus et sit amet mauris. Suspendisse felis sem, condimentum ullamcorper est sit amet.</p>
+                <h3>Заголовок 2</h3>
+                <p>Ut porta viverra est, ut dignissim elit elementum ut. Nunc vel rhoncus nibh, ut tincidunt turpis. Integer ac enim pellentesque, adipiscing metus id, pharetra odio. Donec bibendum nunc sit amet tortor scelerisque luctus et sit amet mauris. Suspendisse felis sem, condimentum ullamcorper est sit amet, molestie mollis nulla. Etiam lorem orci, consequat ac magna quis, facilisis vehicula neque.</p>
+                <h3>Заголовок с пунктами</h3>
+                <ul> 
+                  <li>Пункт 1</li>
+                  <li>Пункт 2</li>
+                  <li>Пункт 3</li>
+                  <li>Пункт 4</li>
+                </ul>
+                <p>Ut porta viverra est, ut dignissim elit elementum ut. Nunc vel rhoncus nibh, ut tincidunt turpis. Integer ac enim pellentesque, adipiscing metus id, pharetra odio. Donec bibendum nunc sit amet tortor scelerisque luctus et sit amet mauris. </p>
               </div>
-            </div>
-            <div class="ce-body"> 
-              <h3>Заголовок 1</h3>
-              <p>Donec facilisis tortor ut augue lacinia, at viverra est semper. Sed sapien metus, scelerisque nec pharetra id, tempor a tortor. Pellentesque non dignissim neque. Ut porta viverra est, ut dignissim elit elementum ut. Nunc vel rhoncus nibh, ut tincidunt turpis. Integer ac enim pellentesque, adipiscing metus id, pharetra odio. Donec bibendum nunc sit amet tortor scelerisque luctus et sit amet mauris. Suspendisse felis sem, condimentum ullamcorper est sit amet.</p>
-              <h3>Заголовок 2</h3>
-              <p>Ut porta viverra est, ut dignissim elit elementum ut. Nunc vel rhoncus nibh, ut tincidunt turpis. Integer ac enim pellentesque, adipiscing metus id, pharetra odio. Donec bibendum nunc sit amet tortor scelerisque luctus et sit amet mauris. Suspendisse felis sem, condimentum ullamcorper est sit amet, molestie mollis nulla. Etiam lorem orci, consequat ac magna quis, facilisis vehicula neque.</p>
-              <h3>Заголовок с пунктами</h3>
-              <ul> 
-                <li>Пункт 1</li>
-                <li>Пункт 2</li>
-                <li>Пункт 3</li>
-                <li>Пункт 4</li>
-              </ul>
-              <p>Ut porta viverra est, ut dignissim elit elementum ut. Nunc vel rhoncus nibh, ut tincidunt turpis. Integer ac enim pellentesque, adipiscing metus id, pharetra odio. Donec bibendum nunc sit amet tortor scelerisque luctus et sit amet mauris. </p>
             </div>
           </div>
         </div>
-      </div>
-      <div class="cabinet-side">
-        <div class="auto-jsCalendar" data-language="ru"></div>
-        <div class="cabinet-info">
-          <h3>Ваш тарифный план</h3>
-          <div class="ci-line"><span>Тариф:</span><span>Тариф</span></div>
-          <div class="ci-line"><span>Оплачено до:</span><span>23.03.2020</span></div>
-          <div class="ci-line"><span>Осталось мероприятий:</span><span>23</span></div>
-          <div class="ci-line"><span>Ограничения по городу:</span><span>Нет ограничений</span></div>
-          <div class="ci-line"><span>Активные мероприятия:</span><span>5</span></div>
+        <div class="cabinet-side">
+          <div class="auto-jsCalendar" data-language="ru"></div>
+          <div class="cabinet-info">
+            <h3>Ваш тарифный план</h3>
+            <div class="ci-line"><span>Тариф:</span><span>Тариф</span></div>
+            <div class="ci-line"><span>Оплачено до:</span><span>23.03.2020</span></div>
+            <div class="ci-line"><span>Осталось мероприятий:</span><span>23</span></div>
+            <div class="ci-line"><span>Ограничения по городу:</span><span>Нет ограничений</span></div>
+            <div class="ci-line"><span>Активные мероприятия:</span><span>5</span></div>
+          </div>
         </div>
+        <div class="btn-wc-bottom"><a class="btn orange" href="#">Редактировать</a></div>
       </div>
-      <div class="btn-wc-bottom"><a class="btn orange" href="#">Редактировать</a></div>
     </div>
   </body>
 </html>
