--- a/html/cabinet-news.html
+++ b/html/cabinet-news.html
@@ -70,42 +70,44 @@
         </nav>
       </div>
     </header>
-    <div class="hamburger color"></div>
+    <div class="hamburger color element-btn" data-showEl="0"></div>
     <!-- header-->
-    <div class="stub"></div>
-    <div class="cabinet-all main-grid"> 
-      <div class="cabinet-body">
-        <div class="cabinet-event"> 
-          <h2>Заголовок размещенной новости в две или несколько строк</h2>
-          <div class="cabinet-event-container">
-            <div class="ce-head">
-              <div class="ce-gallery">
-                <div class="gallery-main"><img src="../images/1.jpg"></div>
-                <div class="gallery-navigation">
-                  <div class="g-prev"></div>
-                  <div class="g-next"></div>
-                  <div class="img-container"><img src="../images/1.jpg"><img src="../images/1.jpg"><img src="../images/1.jpg"></div>
+    <div class="wrapper">
+      <div class="stub"></div>
+      <div class="cabinet-all main-grid"> 
+        <div class="cabinet-body">
+          <div class="cabinet-event"> 
+            <h2>Заголовок размещенной новости в две или несколько строк</h2>
+            <div class="cabinet-event-container">
+              <div class="ce-head">
+                <div class="ce-gallery">
+                  <div class="gallery-main"><img src="../images/1.jpg"></div>
+                  <div class="gallery-navigation">
+                    <div class="g-prev"></div>
+                    <div class="g-next"></div>
+                    <div class="img-container"><img src="../images/1.jpg"><img src="../images/1.jpg"><img src="../images/1.jpg"></div>
+                  </div>
                 </div>
               </div>
-            </div>
-            <div class="ce-body"> 
-              <ut>tincidunt turpis. Integer ac enim pellentesque, adipiscing metus id, pharetra odio. Donec bibendum nunc sit amet tortor scelerisque luctus et sit amet mauris. Suspendisse felis sem, condimentum ullamcorper est sit amet.ut tincidunt turpis. Integer ac enim pellentesque, adipiscing metus id, pharetra odio. Donec bibendum nunc sit amet tortor scelerisque luctus et sit amet mauris. Suspendisse felis sem, condimentum ullamcorper est sit amet. Suspendisse felis sem, condimentum ullamcorper est sit amet. Sed sapien metus, scelerisque nec pharetra id, tempor a tortor. Pellentesque non dignissim neque. Ut porta viverra est, ut dignissim elit elementum ut. Nunc vel rhoncus nibh, ut tincidunt turpis. Integer ac enim pellentesque, adipiscing metus id, pharetra odio. Donec bibendum nunc sit amet tortor scelerisque luctus et sit amet mauris. Suspendisse felis sem, condimentum ullamcorper est sit amet. Sed sapien metus, scelerisque nec pharetra id, tempor a tortor. Pellentesque non dignissim neque. Ut porta viverra est, ut dignissim elit elementum ut. Nunc vel rhoncus nibh.</ut>
+              <div class="ce-body"> 
+                <ut>tincidunt turpis. Integer ac enim pellentesque, adipiscing metus id, pharetra odio. Donec bibendum nunc sit amet tortor scelerisque luctus et sit amet mauris. Suspendisse felis sem, condimentum ullamcorper est sit amet.ut tincidunt turpis. Integer ac enim pellentesque, adipiscing metus id, pharetra odio. Donec bibendum nunc sit amet tortor scelerisque luctus et sit amet mauris. Suspendisse felis sem, condimentum ullamcorper est sit amet. Suspendisse felis sem, condimentum ullamcorper est sit amet. Sed sapien metus, scelerisque nec pharetra id, tempor a tortor. Pellentesque non dignissim neque. Ut porta viverra est, ut dignissim elit elementum ut. Nunc vel rhoncus nibh, ut tincidunt turpis. Integer ac enim pellentesque, adipiscing metus id, pharetra odio. Donec bibendum nunc sit amet tortor scelerisque luctus et sit amet mauris. Suspendisse felis sem, condimentum ullamcorper est sit amet. Sed sapien metus, scelerisque nec pharetra id, tempor a tortor. Pellentesque non dignissim neque. Ut porta viverra est, ut dignissim elit elementum ut. Nunc vel rhoncus nibh.</ut>
+              </div>
             </div>
           </div>
         </div>
-      </div>
-      <div class="cabinet-side">
-        <div class="auto-jsCalendar" data-language="ru"></div>
-        <div class="cabinet-info">
-          <h3>Ваш тарифный план</h3>
-          <div class="ci-line"><span>Тариф:</span><span>Тариф</span></div>
-          <div class="ci-line"><span>Оплачено до:</span><span>23.03.2020</span></div>
-          <div class="ci-line"><span>Осталось мероприятий:</span><span>23</span></div>
-          <div class="ci-line"><span>Ограничения по городу:</span><span>Нет ограничений</span></div>
-          <div class="ci-line"><span>Активные мероприятия:</span><span>5</span></div>
+        <div class="cabinet-side">
+          <div class="auto-jsCalendar" data-language="ru"></div>
+          <div class="cabinet-info">
+            <h3>Ваш тарифный план</h3>
+            <div class="ci-line"><span>Тариф:</span><span>Тариф</span></div>
+            <div class="ci-line"><span>Оплачено до:</span><span>23.03.2020</span></div>
+            <div class="ci-line"><span>Осталось мероприятий:</span><span>23</span></div>
+            <div class="ci-line"><span>Ограничения по городу:</span><span>Нет ограничений</span></div>
+            <div class="ci-line"><span>Активные мероприятия:</span><span>5</span></div>
+          </div>
         </div>
+        <div class="btn-wc-bottom"><a class="btn orange" href="#">Редактировать</a></div>
       </div>
-      <div class="btn-wc-bottom"><a class="btn orange" href="#">Редактировать</a></div>
     </div>
   </body>
 </html>
