--- a/html/canvas.html
+++ b/html/canvas.html
@@ -70,7 +70,7 @@
         </nav>
       </div>
     </header>
-    <div class="hamburger color"></div>
+    <div class="hamburger color element-btn" data-showEl="0"></div>
     <!-- header-->
     <div class="stub"></div>
     <div class="canvas-container">
