--- a/html/index.html
+++ b/html/index.html
@@ -55,12 +55,12 @@
     </div>
     <!-- popup-feedback-->
     <!-- popup-enter-->
+    <div class="popup-wrapper-blur element-show" data-showEl="1"></div>
     <div class="popup-wrapper element-show" data-showEl="1">
       <div class="popup-container">
         <div class="pc-header">
           <div class="close"></div>
           <h2>Вход в личный кабинет</h2>
-          <p>Если вы столкнулись с проблемой, или у вас есть вопрос по работе сервиса, а так же предложения, напишите нам.</p>
         </div>
         <form class="form">
           <input type="text" placeholder="Ваше Логин">
@@ -156,7 +156,8 @@
               <div class="category-name">Категория мероприятия</div>
             </div>
             <h3>Заголовок размещенного мероприятия в несколько…</h3>
-            <div class="description">Curabitur lobortis id lorem id bibendum. Ut id consectetur magna. Quisque volutpat augue enim, pulvinar lobortis nibh lacinia at. Vestibulum nec erat ut mi sollicitudin porttitor id sit amet risus.</div>
+            <div class="description"> Curabitur lobortis id la. Quismet risus.
+            </div>
             <div class="ei-footer">
               <div class="place"> <i></i>Новосибирск</div>
               <div class="btn-wc"><a class="btn orange-border small" href="#">Подробнее</a></div>
@@ -168,7 +169,8 @@
               <div class="category-name">Категория мероприятия</div>
             </div>
             <h3>Заголовок размещенного мероприятия в несколько…</h3>
-            <div class="description">Curabitur lobortis id lorem id bibendum. Ut id consectetur magna. Quisque volutpat augue enim, pulvinar lobortis nibh lacinia at. Vestibulum nec erat ut mi sollicitudin porttitor id sit amet risus.</div>
+            <div class="description"> Curabitur lobortis id lorem id bibendum. Ut id consectet
+            </div>
             <div class="ei-footer">
               <div class="place"> <i></i>Новосибирск</div>
               <div class="btn-wc"><a class="btn orange-border small" href="#">Подробнее</a></div>
@@ -180,7 +182,8 @@
               <div class="category-name">Категория мероприятия</div>
             </div>
             <h3>Заголовок размещенного мероприятия в несколько…</h3>
-            <div class="description">Curabitur lobortis id lorem id bibendum. Ut id consectetur magna. Quisque volutpat augue enim, pulvinar lobortis nibh lacinia at. Vestibulum nec erat ut mi sollicitudin porttitor id sit amet risus.</div>
+            <div class="description"> Curabitur lobortis id lorem id bibendum. Ut id consectetur magna. Quisque volutpat augue enim, pulvinar lobortis nibh lacinia at. Vestibulum nec erat ut mi sollicitudin porttitor id sit amet risus.
+            </div>
             <div class="ei-footer">
               <div class="place"> <i></i>Новосибирск</div>
               <div class="btn-wc"><a class="btn orange-border small" href="#">Подробнее</a></div>
@@ -192,7 +195,8 @@
               <div class="category-name">Категория мероприятия</div>
             </div>
             <h3>Заголовок размещенного мероприятия в несколько…</h3>
-            <div class="description">Curabitur lobortis id lorem id bibendum. Ut id consectetur magna. Quisque volutpat augue enim, pulvinar lobortis nibh lacinia at. Vestibulum nec erat ut mi sollicitudin porttitor id sit amet risus.</div>
+            <div class="description"> Curabitur lobortis id lorem id bibendum. Ut id consectetur magna. Quisque volutpat augue enim, pulvinar lobortis nibh lacinia at. Vestibulum nec erat ut mi sollicitudin porttitor id sit amet risus.
+            </div>
             <div class="ei-footer">
               <div class="place"> <i></i>Новосибирск</div>
               <div class="btn-wc"><a class="btn orange-border small" href="#">Подробнее</a></div>
@@ -204,7 +208,8 @@
               <div class="category-name">Категория мероприятия</div>
             </div>
             <h3>Заголовок размещенного мероприятия в несколько…</h3>
-            <div class="description">Curabitur lobortis id lorem id bibendum. Ut id consectetur magna. Quisque volutpat augue enim, pulvinar lobortis nibh lacinia at. Vestibulum nec erat ut mi sollicitudin porttitor id sit amet risus.</div>
+            <div class="description"> Curabitur lobortis id lorem id bibendum. Ut id consectetur magna. Quisque volutpat augue enim, pulvinar lobortis nibh lacinia at. Vestibulum nec erat ut mi sollicitudin porttitor id sit amet risus.
+            </div>
             <div class="ei-footer">
               <div class="place"> <i></i>Новосибирск</div>
               <div class="btn-wc"><a class="btn orange-border small" href="#">Подробнее</a></div>
@@ -216,7 +221,8 @@
               <div class="category-name">Категория мероприятия</div>
             </div>
             <h3>Заголовок размещенного мероприятия в несколько…</h3>
-            <div class="description">Curabitur lobortis id lorem id bibendum. Ut id consectetur magna. Quisque volutpat augue enim, pulvinar lobortis nibh lacinia at. Vestibulum nec erat ut mi sollicitudin porttitor id sit amet risus.</div>
+            <div class="description"> Curabitur lobortis id lorem id bibendum. Ut id consectetur magna. Quisque volutpat augue enim, pulvinar lobortis nibh lacinia at. Vestibulum nec erat ut mi sollicitudin porttitor id sit amet risus.
+            </div>
             <div class="ei-footer">
               <div class="place"> <i></i>Новосибирск</div>
               <div class="btn-wc"><a class="btn orange-border small" href="#">Подробнее</a></div>
@@ -228,31 +234,8 @@
               <div class="category-name">Категория мероприятия</div>
             </div>
             <h3>Заголовок размещенного мероприятия в несколько…</h3>
-            <div class="description">Curabitur lobortis id lorem id bibendum. Ut id consectetur magna. Quisque volutpat augue enim, pulvinar lobortis nibh lacinia at. Vestibulum nec erat ut mi sollicitudin porttitor id sit amet risus.</div>
-            <div class="ei-footer">
-              <div class="place"> <i></i>Новосибирск</div>
-              <div class="btn-wc"><a class="btn orange-border small" href="#">Подробнее</a></div>
+            <div class="description"> Curabitur lobortis id lorem id bibendum. Ut id consectetur magna. Quisque volutpat augue enim, pulvinar lobortis nibh lacinia at. Vestibulum nec erat ut mi sollicitudin porttitor id sit amet risus.
             </div>
-          </div>
-          <div class="event-item">
-            <div class="ei-head">
-              <div class="data"> <i> </i>2 Июня 12:30</div>
-              <div class="category-name">Категория мероприятия</div>
-            </div>
-            <h3>Заголовок размещенного мероприятия в несколько…</h3>
-            <div class="description">Curabitur lobortis id lorem id bibendum. Ut id consectetur magna. Quisque volutpat augue enim, pulvinar lobortis nibh lacinia at. Vestibulum nec erat ut mi sollicitudin porttitor id sit amet risus.</div>
-            <div class="ei-footer">
-              <div class="place"> <i></i>Новосибирск</div>
-              <div class="btn-wc"><a class="btn orange-border small" href="#">Подробнее</a></div>
-            </div>
-          </div>
-          <div class="event-item">
-            <div class="ei-head">
-              <div class="data"> <i> </i>2 Июня 12:30</div>
-              <div class="category-name">Категория мероприятия</div>
-            </div>
-            <h3>Заголовок размещенного мероприятия в несколько…</h3>
-            <div class="description">Curabitur lobortis id lorem id bibendum. Ut id consectetur magna. Quisque volutpat augue enim, pulvinar lobortis nibh lacinia at. Vestibulum nec erat ut mi sollicitudin porttitor id sit amet risus.</div>
             <div class="ei-footer">
               <div class="place"> <i></i>Новосибирск</div>
               <div class="btn-wc"><a class="btn orange-border small" href="#">Подробнее</a></div>
@@ -393,7 +376,7 @@
                 <div class="text">Это платформа для организаторов и людей которым интересны мастер классы, обучение, мероприятия. Наш сервис помогает решить задачу для пользователей. И людей мастер классы, обучение, мероприятия. Наш сервис помогает решить задачу для пользователей. и людей которым интересны мастер классы, обучение, мероприятия. Наш сервис помогает решить задачу для пользователей.</div>
               </div>
             </div>
-            <div class="slider-img"><img class="page" src="../images/page.png"></div>
+            <div class="slider-img slider-img-page"><img class="page" src="../images/page.png"></div>
           </div>
         </div>
       </div>
