--- a/html/quest-answ.html
+++ b/html/quest-answ.html
@@ -70,51 +70,53 @@
         </nav>
       </div>
     </header>
-    <div class="hamburger color"></div>
+    <div class="hamburger color element-btn" data-showEl="0"></div>
     <!-- header-->
-    <div class="stub"></div>
-    <h1 class="global color">FAQ</h1>
-    <!-- faq-page-->
-    <div class="faq-page">
-      <div class="question-part main-grid active">
-        <h2 class="qp-head"> <i></i>Раздел 1</h2>
-        <div class="question-item"><img class="qi-ico" src="../images/question.png">
-          <div class="ei-text">Curabitur lobortis id lorem id bibendum. Ut id consectetur magna. Quisque volutpat augue enim, pulvinar lobortis nibh. Ut id consectetur magna. Quisque volutpat augue enim, pulvinar lobortis nibh.</div>
-          <div class="btn-wc"><a class="btn orange-border small" href="#">Посмотреть ответ</a></div>
+    <div class="wrapper">
+      <div class="stub"></div>
+      <h1 class="global color">FAQ</h1>
+      <!-- faq-page-->
+      <div class="faq-page">
+        <div class="question-part main-grid active">
+          <h2 class="qp-head"> <i></i>Раздел 1</h2>
+          <div class="question-item"><img class="qi-ico" src="../images/question.png">
+            <div class="ei-text">Curabitur lobortis id lorem id bibendum. Ut id consectetur magna. Quisque volutpat augue enim, pulvinar lobortis nibh. Ut id consectetur magna. Quisque volutpat augue enim, pulvinar lobortis nibh.</div>
+            <div class="btn-wc"><a class="btn orange-border small" href="#">Посмотреть ответ</a></div>
+          </div>
+          <div class="question-item"><img class="qi-ico" src="../images/question.png">
+            <div class="ei-text">Curabitur lobortis id lorem id bibendum. Ut id consectetur magna. Quisque volutpat augue enim, pulvinar lobortis nibh. Ut id consectetur magna. Quisque volutpat augue enim, pulvinar lobortis nibh.</div>
+            <div class="btn-wc"><a class="btn orange-border small" href="#">Посмотреть ответ</a></div>
+          </div>
+          <div class="question-item"><img class="qi-ico" src="../images/question.png">
+            <div class="ei-text">Curabitur lobortis id lorem id bibendum. Ut id consectetur magna. Quisque volutpat augue enim, pulvinar lobortis nibh. Ut id consectetur magna. Quisque volutpat augue enim, pulvinar lobortis nibh.</div>
+            <div class="btn-wc"><a class="btn orange-border small" href="#">Посмотреть ответ</a></div>
+          </div>
+          <div class="question-item"><img class="qi-ico" src="../images/question.png">
+            <div class="ei-text">Curabitur lobortis id lorem id bibendum. Ut id consectetur magna. Quisque volutpat augue enim, pulvinar lobortis nibh. Ut id consectetur magna. Quisque volutpat augue enim, pulvinar lobortis nibh.</div>
+            <div class="btn-wc"><a class="btn orange-border small" href="#">Посмотреть ответ</a></div>
+          </div>
         </div>
-        <div class="question-item"><img class="qi-ico" src="../images/question.png">
-          <div class="ei-text">Curabitur lobortis id lorem id bibendum. Ut id consectetur magna. Quisque volutpat augue enim, pulvinar lobortis nibh. Ut id consectetur magna. Quisque volutpat augue enim, pulvinar lobortis nibh.</div>
-          <div class="btn-wc"><a class="btn orange-border small" href="#">Посмотреть ответ</a></div>
-        </div>
-        <div class="question-item"><img class="qi-ico" src="../images/question.png">
-          <div class="ei-text">Curabitur lobortis id lorem id bibendum. Ut id consectetur magna. Quisque volutpat augue enim, pulvinar lobortis nibh. Ut id consectetur magna. Quisque volutpat augue enim, pulvinar lobortis nibh.</div>
-          <div class="btn-wc"><a class="btn orange-border small" href="#">Посмотреть ответ</a></div>
-        </div>
-        <div class="question-item"><img class="qi-ico" src="../images/question.png">
-          <div class="ei-text">Curabitur lobortis id lorem id bibendum. Ut id consectetur magna. Quisque volutpat augue enim, pulvinar lobortis nibh. Ut id consectetur magna. Quisque volutpat augue enim, pulvinar lobortis nibh.</div>
-          <div class="btn-wc"><a class="btn orange-border small" href="#">Посмотреть ответ</a></div>
+        <div class="question-part main-grid">
+          <h2 class="qp-head"><i></i>Раздел 2</h2>
+          <div class="question-item"><img class="qi-ico" src="../images/question.png">
+            <div class="ei-text">Curabitur lobortis id lorem id bibendum. Ut id consectetur magna. Quisque volutpat augue enim, pulvinar lobortis nibh. Ut id consectetur magna. Quisque volutpat augue enim, pulvinar lobortis nibh.</div>
+            <div class="btn-wc"><a class="btn orange-border small" href="#">Посмотреть ответ</a></div>
+          </div>
+          <div class="question-item"><img class="qi-ico" src="../images/question.png">
+            <div class="ei-text">Curabitur lobortis id lorem id bibendum. Ut id consectetur magna. Quisque volutpat augue enim, pulvinar lobortis nibh. Ut id consectetur magna. Quisque volutpat augue enim, pulvinar lobortis nibh.</div>
+            <div class="btn-wc"><a class="btn orange-border small" href="#">Посмотреть ответ</a></div>
+          </div>
+          <div class="question-item"><img class="qi-ico" src="../images/question.png">
+            <div class="ei-text">Curabitur lobortis id lorem id bibendum. Ut id consectetur magna. Quisque volutpat augue enim, pulvinar lobortis nibh. Ut id consectetur magna. Quisque volutpat augue enim, pulvinar lobortis nibh.</div>
+            <div class="btn-wc"><a class="btn orange-border small" href="#">Посмотреть ответ</a></div>
+          </div>
+          <div class="question-item"><img class="qi-ico" src="../images/question.png">
+            <div class="ei-text">Curabitur lobortis id lorem id bibendum. Ut id consectetur magna. Quisque volutpat augue enim, pulvinar lobortis nibh. Ut id consectetur magna. Quisque volutpat augue enim, pulvinar lobortis nibh.</div>
+            <div class="btn-wc"><a class="btn orange-border small" href="#">Посмотреть ответ</a></div>
+          </div>
         </div>
       </div>
-      <div class="question-part main-grid">
-        <h2 class="qp-head"><i></i>Раздел 2</h2>
-        <div class="question-item"><img class="qi-ico" src="../images/question.png">
-          <div class="ei-text">Curabitur lobortis id lorem id bibendum. Ut id consectetur magna. Quisque volutpat augue enim, pulvinar lobortis nibh. Ut id consectetur magna. Quisque volutpat augue enim, pulvinar lobortis nibh.</div>
-          <div class="btn-wc"><a class="btn orange-border small" href="#">Посмотреть ответ</a></div>
-        </div>
-        <div class="question-item"><img class="qi-ico" src="../images/question.png">
-          <div class="ei-text">Curabitur lobortis id lorem id bibendum. Ut id consectetur magna. Quisque volutpat augue enim, pulvinar lobortis nibh. Ut id consectetur magna. Quisque volutpat augue enim, pulvinar lobortis nibh.</div>
-          <div class="btn-wc"><a class="btn orange-border small" href="#">Посмотреть ответ</a></div>
-        </div>
-        <div class="question-item"><img class="qi-ico" src="../images/question.png">
-          <div class="ei-text">Curabitur lobortis id lorem id bibendum. Ut id consectetur magna. Quisque volutpat augue enim, pulvinar lobortis nibh. Ut id consectetur magna. Quisque volutpat augue enim, pulvinar lobortis nibh.</div>
-          <div class="btn-wc"><a class="btn orange-border small" href="#">Посмотреть ответ</a></div>
-        </div>
-        <div class="question-item"><img class="qi-ico" src="../images/question.png">
-          <div class="ei-text">Curabitur lobortis id lorem id bibendum. Ut id consectetur magna. Quisque volutpat augue enim, pulvinar lobortis nibh. Ut id consectetur magna. Quisque volutpat augue enim, pulvinar lobortis nibh.</div>
-          <div class="btn-wc"><a class="btn orange-border small" href="#">Посмотреть ответ</a></div>
-        </div>
-      </div>
+      <!-- faq-page-->
     </div>
-    <!-- faq-page-->
   </body>
 </html>
