--- a/html/about-service.html
+++ b/html/about-service.html
@@ -55,12 +55,12 @@
     </div>
     <!-- popup-feedback-->
     <!-- popup-enter-->
+    <div class="popup-wrapper-blur element-show" data-showEl="1"></div>
     <div class="popup-wrapper element-show" data-showEl="1">
       <div class="popup-container">
         <div class="pc-header">
           <div class="close"></div>
           <h2>Вход в личный кабинет</h2>
-          <p>Если вы столкнулись с проблемой, или у вас есть вопрос по работе сервиса, а так же предложения, напишите нам.</p>
         </div>
         <form class="form">
           <input type="text" placeholder="Ваше Логин">
@@ -91,100 +91,102 @@
     </header>
     <div class="hamburger element-btn" data-showEl="0"></div>
     <!-- header-->
-    <div class="full-top"><img class="full-top-img" src="../images/full-top.jpg">
-      <div class="main-grid">
-        <h1>Все о сервисе.<br>От идеи, создания, до этапов обновлений и дальнейшего<br>развития</h1>
-      </div>
-    </div>
-    <div class="about-content">
-      <div class="main-grid">
-        <div class="about-top">Curabitur lobortis id lorem id bibendum. Ut id consectetur magna. Quisque volutpat augue enim, pulvinar lobortis nibh lacinia at. Vestibulum nec erat ut mi sollicitudin porttitor id sit amet risus. Nam tempus vel odio vitae aliquam. In imperdiet eros id lacus vestibulum vestibulum. Suspendisse fermentum sem sagittis ante venenatis egestas quis vel justo. Maecenas semper suscipit nunc, sed aliquam sapien convallis eu. Nulla ut turpis in diam dapibus consequat.</div>
-      </div>
-      <div class="idea-item main-grid">
-        <h2>Идея</h2>
-        <div class="idea-person"><img src="../images/face.jpg">
-          <h3>Елена Жорова</h3>
-          <h4>Founder</h4>
-        </div>
-        <div class="idea-description">Donec facilisis tortor ut augue lacinia, at viverra est semper. Sed sapien metus, scelerisque nec pharetra id, tempor a tortor. Pellentesque non dignissim neque. Ut porta viverra est, ut dignissim elit elementum ut. Nunc vel rhoncus nibh, ut tincidunt turpis. Integer ac enim pellentesque, adipiscing metus id, pharetra odio. Donec bibendum nunc sit amet tortor scelerisque luctus et sit amet mauris.</div>
-      </div>
-      <div class="idea-item main-grid">
-        <h2>От идеи, до большого рабочего проекта</h2>
-        <div class="idea-person"><img src="../images/face.jpg">
-          <h3>Игорь Болтовский</h3>
-          <h4>CEO</h4>
-        </div>
-        <div class="idea-description">Donec facilisis tortor ut augue lacinia, at viverra est semper. Sed sapien metus, scelerisque nec pharetra id, tempor a tortor. Pellentesque non dignissim neque. Ut porta viverra est, ut dignissim elit elementum ut. Nunc vel rhoncus nibh, ut tincidunt turpis. Integer ac enim pellentesque, adipiscing metus id, pharetra odio. Donec bibendum nunc sit amet tortor scelerisque luctus et sit amet mauris.</div>
-      </div>
-    </div>
-    <div class="stages-container">
-      <h2>
-         Релизация, этапы развития,<br>дальнейшие обновления</h2>
-      <div class="line-center"></div>
-      <div class="stages-item main-grid">
-        <h3>Основной функционал для полноценной работы сервиса</h3>
-        <div class="stage-description"><b>Для организаторов:</b>
-          <ul>
-            <li>Разработан удобный личный кабинет</li>
-            <li>Добавлен функционал добавления мероприятий на платформу</li>
-            <li>Реализовано  добавление новостей на платформу для пользователей</li>
-            <li>Добавлена доска отследивания ваших мероприятий на платформе</li>
-          </ul><b>Для пользователей </b>
-          <ul>
-            <li>Разработан удобный интерфейс регистрации, при регистрации вы выбираете интересные вам категории.</li>
-            <li>Лучшим образом реализована сортировка мероприятий в календаре </li>
-            <li>Реализован личный календарь, в который вы можете добавлять свои личные события</li>
-            <li>Добавлен функционал карточек мероприятий, в котором вы можете поменить мероприятие кнопкой «Иду!» и приложение автоматически добавит его в ваш личный календарь, а так же вовремя напомнит о событии</li>
-            <li>Добавлена карточка организаторов, где вы можете посмотреть всю информацию о органиаторе, предстоящих и прошедших событиях, а так же подписаться на организатора, что бы появлялись новости от него в вашей информационной ленте</li>
-            <li>Разработана информационная лента, в которой вам предосмтавляется информация от организаторов, на которых вы подписаны, системные и инфорационные новости</li>
-          </ul>
+    <div class="wrapper">
+      <div class="full-top"><img class="full-top-img" src="../images/full-top.jpg">
+        <div class="main-grid">
+          <h1>Все о сервисе.<br>От идеи, создания, до этапов обновлений и дальнейшего<br>развития</h1>
         </div>
       </div>
-      <div class="line-center"></div>
-      <div class="stages-item main-grid">
-        <h3>Следующий этап крупных обновлений и добавление нового функционала</h3>
-        <div class="stage-description"><b>Для организаторов:</b>
-          <ul>
-            <li>Разработан удобный личный кабинет</li>
-            <li>Добавлен функционал добавления мероприятий на платформу</li>
-            <li>Реализовано  добавление новостей на платформу для пользователей</li>
-            <li>Добавлена доска отследивания ваших мероприятий на платформе</li>
-          </ul><b>Для пользователей </b>
-          <ul>
-            <li>Разработан удобный интерфейс регистрации, при регистрации вы выбираете интересные вам категории.</li>
-            <li>Лучшим образом реализована сортировка мероприятий в календаре </li>
-            <li>Реализован личный календарь, в который вы можете добавлять свои личные события</li>
-            <li>Добавлен функционал карточек мероприятий, в котором вы можете поменить мероприятие кнопкой «Иду!» и приложение автоматически добавит его в ваш личный календарь, а так же вовремя напомнит о событии</li>
-            <li>Добавлена карточка организаторов, где вы можете посмотреть всю информацию о органиаторе, предстоящих и прошедших событиях, а так же подписаться на организатора, что бы появлялись новости от него в вашей информационной ленте</li>
-            <li>Разработана информационная лента, в которой вам предосмтавляется информация от организаторов, на которых вы подписаны, системные и инфорационные новости</li>
-          </ul>
+      <div class="about-content">
+        <div class="main-grid">
+          <div class="about-top">Curabitur lobortis id lorem id bibendum. Ut id consectetur magna. Quisque volutpat augue enim, pulvinar lobortis nibh lacinia at. Vestibulum nec erat ut mi sollicitudin porttitor id sit amet risus. Nam tempus vel odio vitae aliquam. In imperdiet eros id lacus vestibulum vestibulum. Suspendisse fermentum sem sagittis ante venenatis egestas quis vel justo. Maecenas semper suscipit nunc, sed aliquam sapien convallis eu. Nulla ut turpis in diam dapibus consequat.</div>
         </div>
-      </div>
-    </div>
-    <div class="line-center"></div>
-    <div class="about-question">
-      <h2>
-         Какие дальнейшие варианты развития<br>платформы?</h2>
-      <div class="question-tabs-cotnainer main-grid">
-        <div class="tc-item">Разработка функционала для проведение онлайн-мероприятий </div>
-        <div class="tc-item">Разработка функционала для проведение онлайн-мероприятий </div>
-        <div class="tc-item">Разработка функционала для проведение онлайн-мероприятий </div>
-        <div class="tc-item">Разработка функционала для проведение онлайн-мероприятий </div>
-      </div>
-      <div class="question-answer-container main-grid">
-        <div class="qa-item main-grid">
-          <div class="qa-person"><img src="../images/face.jpg">
+        <div class="idea-item main-grid">
+          <h2>Идея</h2>
+          <div class="idea-person"><img src="../images/face.jpg">
+            <h3>Елена Жорова</h3>
+            <h4>Founder</h4>
+          </div>
+          <div class="idea-description">Donec facilisis tortor ut augue lacinia, at viverra est semper. Sed sapien metus, scelerisque nec pharetra id, tempor a tortor. Pellentesque non dignissim neque. Ut porta viverra est, ut dignissim elit elementum ut. Nunc vel rhoncus nibh, ut tincidunt turpis. Integer ac enim pellentesque, adipiscing metus id, pharetra odio. Donec bibendum nunc sit amet tortor scelerisque luctus et sit amet mauris.</div>
+        </div>
+        <div class="idea-item main-grid">
+          <h2>От идеи, до большого рабочего проекта</h2>
+          <div class="idea-person"><img src="../images/face.jpg">
             <h3>Игорь Болтовский</h3>
             <h4>CEO</h4>
           </div>
-          <div class="qa-description">Donec facilisis tortor ut augue lacinia, at viverra est semper. Sed sapien metus, scelerisque nec pharetra id, tempor a tortor. Pellentesque non dignissim neque. Ut porta viverra est, ut dignissim elit elementum ut. Nunc vel rhoncus nibh, ut tincidunt turpis. Integer ac enim pellentesque, adipiscing metus id, pharetra odio. Donec bibendum nunc sit amet tortor scelerisque luctus et sit amet mauris.</div>
+          <div class="idea-description">Donec facilisis tortor ut augue lacinia, at viverra est semper. Sed sapien metus, scelerisque nec pharetra id, tempor a tortor. Pellentesque non dignissim neque. Ut porta viverra est, ut dignissim elit elementum ut. Nunc vel rhoncus nibh, ut tincidunt turpis. Integer ac enim pellentesque, adipiscing metus id, pharetra odio. Donec bibendum nunc sit amet tortor scelerisque luctus et sit amet mauris.</div>
         </div>
-        <div class="qa-item main-grid">
-          <div class="qa-person"><img src="../images/face.jpg">
-            <h3>Игорь Болтовский</h3>
-            <h4>CEO</h4>
+      </div>
+      <div class="stages-container">
+        <h2>
+           Релизация, этапы развития,<br>дальнейшие обновления</h2>
+        <div class="line-center"></div>
+        <div class="stages-item main-grid">
+          <h3>Основной функционал для полноценной работы сервиса</h3>
+          <div class="stage-description"><b>Для организаторов:</b>
+            <ul>
+              <li>Разработан удобный личный кабинет</li>
+              <li>Добавлен функционал добавления мероприятий на платформу</li>
+              <li>Реализовано  добавление новостей на платформу для пользователей</li>
+              <li>Добавлена доска отследивания ваших мероприятий на платформе</li>
+            </ul><b>Для пользователей </b>
+            <ul>
+              <li>Разработан удобный интерфейс регистрации, при регистрации вы выбираете интересные вам категории.</li>
+              <li>Лучшим образом реализована сортировка мероприятий в календаре </li>
+              <li>Реализован личный календарь, в который вы можете добавлять свои личные события</li>
+              <li>Добавлен функционал карточек мероприятий, в котором вы можете поменить мероприятие кнопкой «Иду!» и приложение автоматически добавит его в ваш личный календарь, а так же вовремя напомнит о событии</li>
+              <li>Добавлена карточка организаторов, где вы можете посмотреть всю информацию о органиаторе, предстоящих и прошедших событиях, а так же подписаться на организатора, что бы появлялись новости от него в вашей информационной ленте</li>
+              <li>Разработана информационная лента, в которой вам предосмтавляется информация от организаторов, на которых вы подписаны, системные и инфорационные новости</li>
+            </ul>
           </div>
-          <div class="qa-description">Donec facilisis tortor ut augue lacinia, at viverra est semper. Sed sapien metus, scelerisque nec pharetra id, tempor a tortor. Pellentesque non dignissim neque. Ut porta viverra est, ut dignissim elit elementum ut. Nunc vel rhoncus nibh, ut tincidunt turpis. Integer ac enim pellentesque, adipiscing metus id, pharetra odio. Donec bibendum nunc sit amet tortor scelerisque luctus et sit amet mauris.</div>
+        </div>
+        <div class="line-center"></div>
+        <div class="stages-item main-grid">
+          <h3>Следующий этап крупных обновлений и добавление нового функционала</h3>
+          <div class="stage-description"><b>Для организаторов:</b>
+            <ul>
+              <li>Разработан удобный личный кабинет</li>
+              <li>Добавлен функционал добавления мероприятий на платформу</li>
+              <li>Реализовано  добавление новостей на платформу для пользователей</li>
+              <li>Добавлена доска отследивания ваших мероприятий на платформе</li>
+            </ul><b>Для пользователей </b>
+            <ul>
+              <li>Разработан удобный интерфейс регистрации, при регистрации вы выбираете интересные вам категории.</li>
+              <li>Лучшим образом реализована сортировка мероприятий в календаре </li>
+              <li>Реализован личный календарь, в который вы можете добавлять свои личные события</li>
+              <li>Добавлен функционал карточек мероприятий, в котором вы можете поменить мероприятие кнопкой «Иду!» и приложение автоматически добавит его в ваш личный календарь, а так же вовремя напомнит о событии</li>
+              <li>Добавлена карточка организаторов, где вы можете посмотреть всю информацию о органиаторе, предстоящих и прошедших событиях, а так же подписаться на организатора, что бы появлялись новости от него в вашей информационной ленте</li>
+              <li>Разработана информационная лента, в которой вам предосмтавляется информация от организаторов, на которых вы подписаны, системные и инфорационные новости</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <div class="line-center"></div>
+      <div class="about-question">
+        <h2>
+           Какие дальнейшие варианты развития<br>платформы?</h2>
+        <div class="question-tabs-cotnainer main-grid">
+          <div class="tc-item">Разработка функционала для проведение онлайн-мероприятий </div>
+          <div class="tc-item">Разработка функционала для проведение онлайн-мероприятий </div>
+          <div class="tc-item">Разработка функционала для проведение онлайн-мероприятий </div>
+          <div class="tc-item">Разработка функционала для проведение онлайн-мероприятий </div>
+        </div>
+        <div class="question-answer-container main-grid">
+          <div class="qa-item main-grid">
+            <div class="qa-person"><img src="../images/face.jpg">
+              <h3>Игорь Болтовский</h3>
+              <h4>CEO</h4>
+            </div>
+            <div class="qa-description">Donec facilisis tortor ut augue lacinia, at viverra est semper. Sed sapien metus, scelerisque nec pharetra id, tempor a tortor. Pellentesque non dignissim neque. Ut porta viverra est, ut dignissim elit elementum ut. Nunc vel rhoncus nibh, ut tincidunt turpis. Integer ac enim pellentesque, adipiscing metus id, pharetra odio. Donec bibendum nunc sit amet tortor scelerisque luctus et sit amet mauris.</div>
+          </div>
+          <div class="qa-item main-grid">
+            <div class="qa-person"><img src="../images/face.jpg">
+              <h3>Игорь Болтовский</h3>
+              <h4>CEO</h4>
+            </div>
+            <div class="qa-description">Donec facilisis tortor ut augue lacinia, at viverra est semper. Sed sapien metus, scelerisque nec pharetra id, tempor a tortor. Pellentesque non dignissim neque. Ut porta viverra est, ut dignissim elit elementum ut. Nunc vel rhoncus nibh, ut tincidunt turpis. Integer ac enim pellentesque, adipiscing metus id, pharetra odio. Donec bibendum nunc sit amet tortor scelerisque luctus et sit amet mauris.</div>
+          </div>
         </div>
       </div>
     </div>
