--- a/html/contacts-page.html
+++ b/html/contacts-page.html
@@ -70,27 +70,29 @@
         </nav>
       </div>
     </header>
-    <div class="hamburger color"></div>
+    <div class="hamburger color element-btn" data-showEl="0"></div>
     <!-- header-->
-    <div class="stub"></div>
-    <h1 class="global color">Контакты</h1>
-    <div class="contacts-page main-grid">
-      <div class="form">
-        <h2>Отправьте свой вопрос и мы ответим в ближайшее время</h2>
-        <div>
-          <input type="text" placeholder="Имя Фамилия*">
-          <input type="text" placeholder="Email">
-          <input type="text" placeholder="Телефон">
-          <textarea></textarea>
-          <input class="btn orange" type="submit" value="Отправить">
+    <div class="wrapper">
+      <div class="stub"></div>
+      <h1 class="global color">Контакты</h1>
+      <div class="contacts-page main-grid">
+        <div class="form">
+          <h2>Отправьте свой вопрос и мы ответим в ближайшее время</h2>
+          <div>
+            <input type="text" placeholder="Имя Фамилия*">
+            <input type="text" placeholder="Email">
+            <input type="text" placeholder="Телефон">
+            <textarea></textarea>
+            <input class="btn orange" type="submit" value="Отправить">
+          </div>
         </div>
-      </div>
-      <div class="feedback"> 
-        <h2>Или свяжитесь с нами любым удобным для вас способом</h2>
-        <div class="phone">+7 (999) 999-99-99 </div>
-        <div class="mail">info@domain.com</div>
-        <div class="address">г. Новосибирск<br>ул. Улица, д. 99, оф. 212</div>
-        <div class="social"><a href="#"><img src="../images/social/i-b-2.svg"></a><a href="#"><img src="../images/social/f-b.svg"></a><a href="#"><img src="../images/social/v-b-2.svg"></a></div>
+        <div class="feedback"> 
+          <h2>Или свяжитесь с нами любым удобным для вас способом</h2>
+          <div class="phone">+7 (999) 999-99-99 </div>
+          <div class="mail">info@domain.com</div>
+          <div class="address">г. Новосибирск<br>ул. Улица, д. 99, оф. 212</div>
+          <div class="social"><a href="#"><img src="../images/social/i-b-2.svg"></a><a href="#"><img src="../images/social/f-b.svg"></a><a href="#"><img src="../images/social/v-b-2.svg"></a></div>
+        </div>
       </div>
     </div>
   </body>
